--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "superset"]
 	path = superset
-	url = https://github.com/apache/superset.git
+	url = https://github.com/tanico-rikudo/marble.git
